# memz

./: Cargo.toml
src/: engine.rs  main.rs  os_utils.rs  sysreq.rs  tui.rs
